--- a/presentation/home/src/main/res/values/strings.xml
+++ b/presentation/home/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="clear">Clear</string>
     <string name="filter">Filter</string>
     <string name="sort">Sort</string>
+    <string name="sorting_options">Sorting Options</string>
 </resources>
